quorum/test/tests/TypeChecker/Pass/ImpAssignNumberNumberWrapped.quorum
class Main
    action Main
        number n = 7.5
        print n
    end
end