quorum/test/tests/TypeChecker/Fail/ImpAssignNumberTextWrapped.quorum
action main
    class main
        number n = "yep"
    end
end